[package]
name = "simple-address-formatter"
version = "0.1.8"
edition = "2024"
build = "build.rs"
license = "MIT"
description = "A simple tool to format global addresses"
authors = [
	"Indigo Curnick <indigo.c@naurt.com>",
	"Andrew Bowell <andrew.b@naurt.com>",
]
repository = "https://github.com/Naurt-Ltd-Public/simple-address-formatter-rs"
readme = "README.md"
categories = ["template-engine"]
keywords = ["address", "formatting"]


[dependencies]
mustache = "0.9"
# TODO: With serde yaml being deprecated, what's the best library? Using serde-yaml for now.
serde_yml = "0.0.12"
serde = { version = "1.0", features = ["derive"] }
include_dir = "0.7.4"
once_cell = "1.21.3"


[build-dependencies]
mustache = "0.9"
serde_yml = "0.0.12"
serde = { version = "1.0", features = ["derive"] }
include_dir = "0.7.4"
